--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,29 @@
-[build-system]
-requires = [
-    "setuptools>=42",
-    "wheel"
+[tool.poetry]
+name = "armorblox"
+version = "0.1.0"
+description = "Armorblox SDK for Python"
+license="Apache-2.0"
+authors = ["Rajat Upadhyaya <45485+urajat@users.noreply.github.com>"]
+readme="README.md"
+repository="https://github.com/armorblox/armorblox-python-sdk"
+classifiers = [
+    "Development Status :: 5 - Production/Stable",
+    "Intended Audience :: Developers",
+    "License :: OSI Approved :: Apache Software License",
+    "Operating System :: OS Independent",
+    "Programming Language :: Python",
+    "Programming Language :: Python :: 3",
+    "Topic :: Security",
+    "Topic :: Software Development :: Libraries :: Python Modules"
 ]
-build-backend = "setuptools.build_meta"
+
+[tool.poetry.dependencies]
+python = "^3.9"
+requests = "^2.27.1"
+
+[tool.poetry.dev-dependencies]
+pytest = "^5.2"
+
+[build-system]
+requires = ["poetry-core>=1.0.0"]
+build-backend = "poetry.core.masonry.api"
