--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ classifiers = [
 [tool.poetry.dependencies]
 python = "^3.9"
 requests = "^2.27.1"
+cached-property = "^1.5.2"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
