--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,7 @@ cached-property = "^1.5.2"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
+pytest-mock = "^3.7.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
