--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,7 +25,21 @@ cached-property = "^1.5.2"
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
 pytest-mock = "^3.7.0"
+tox = "^3.24.5"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.tox]
+legacy_tox_ini = """
+[tox]
+envlist = py39
+isolated_build = True
+# skipsdist = true
+
+[testenv]
+whitelist_externals = poetry
+deps = pytest >= 3.0.0, <7
+commands = pytest
+"""
