--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,7 @@ cached-property = "^1.5.2"
 pytest = "^5.2"
 pytest-mock = "^3.7.0"
 tox = "^3.24.5"
+responses = "^0.18.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
