--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,13 +1,15 @@
 [tool.poetry]
-name = "armorblox"
+name = "armorblox-sdk"
 version = "0.1.0"
 description = "Armorblox SDK for Python"
 license="Apache-2.0"
-authors = ["Rajat Upadhyaya <45485+urajat@users.noreply.github.com>"]
+authors = [
+    "Rajat Upadhyaya <45485+urajat@users.noreply.github.com>"
+]
 readme="README.md"
 repository="https://github.com/armorblox/armorblox-python-sdk"
 classifiers = [
-    "Development Status :: 5 - Production/Stable",
+    "Development Status :: 3 - Alpha",
     "Intended Audience :: Developers",
     "License :: OSI Approved :: Apache Software License",
     "Operating System :: OS Independent",
@@ -15,6 +17,9 @@ classifiers = [
     "Programming Language :: Python :: 3",
     "Topic :: Security",
     "Topic :: Software Development :: Libraries :: Python Modules"
+]
+packages = [
+    { include = "armorblox", from = "src" }
 ]
 
 [tool.poetry.dependencies]
