--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,12 +1,13 @@
 [tool.poetry]
 name = "armorblox-sdk"
-version = "0.1.2"
+version = "0.1.3"
 description = "Armorblox SDK for Python"
 license="Apache-2.0"
 authors = [
     "Rajat Upadhyaya <45485+urajat@users.noreply.github.com>",
     "Jayant Upadhyaya <2506956+ujayant@users.noreply.github.com>",
-    "Shaunak Phatak <37964968+phatakshaunak@users.noreply.github.com>"
+    "Shaunak Phatak <37964968+phatakshaunak@users.noreply.github.com>",
+    "Ankita Sharma <75658601+ankita-sharma2019@users.noreply.github.com>"
 ]
 readme="README.md"
 repository="https://github.com/armorblox/armorblox-python-sdk"
